traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:10: error: too many arguments for method getX: ()Int
    if (getX(x) == getMondeLargeur(6) && getY(y) == getMondeHauteur(6)){
            ^TraversalByColumn:10: error: too many arguments for method getMondeLargeur: ()Int
    if (getX(x) == getMondeLargeur(6) && getY(y) == getMondeHauteur(6)){
                                  ^TraversalByColumn:10: error: too many arguments for method getY: ()Int
    if (getX(x) == getMondeLargeur(6) && getY(y) == getMondeHauteur(6)){
                                             ^TraversalByColumn:10: error: too many arguments for method getMondeHauteur: ()Int
    if (getX(x) == getMondeLargeur(6) && getY(y) == getMondeHauteur(6)){
                                                                   ^