traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  
  var compt:Int = 1
  var posFin:Boolean = false
  var x:Int = 0
  var y:Int = 0

  
  while (posFin != true){
    
    if (getX(x) == getMondeLargeur(6) && getY(y) == getMondeHauteur(6)){
      posFin = true;
    }
  }
}